# Learning

./: hello.py  log_config.py  pyproject.toml
Docusaurus/my-website/: package-lock.json
NCRE2/: 1.py  2024-09-07.ipynb  2024-09-08.ipynb  2024-09-10.ipynb  2024-09-11.ipynb  2024-09-12.ipynb  fibonacci.py
NCRE2/data/73/: data202.ipynb  data202.txt
Next/backend/: database.py  db.sqlite3  main.py
Next/backend/meals/: models.py  routers.py
Next/first-app/: dummyData.js  package-lock.json  package.json
Next/first-app/app/: layout.js  not-found.jsx  page.js  page.jsx
Next/first-app/components/: Header.jsx
Next/second-app/: package-lock.json  package.json  tailwind.config.js
Ninja/backend/: db.sqlite3  manage.py  rav.yaml  requirement.txt
Ninja/frontend/: package-lock.json  package.json
Ninja/project-vite/: index.html
Ninja/vite-project/: package-lock.json
Ninja/vitepress_blog/: package-lock.json  package.json  pnpm-lock.yaml
React/: package-lock.json
React/javascript/: index.html
React/next-app/: package.json
React/next_app_without_src/: package-lock.json  package.json
React/react-test/: package-lock.json  package.json
React/ts-react-test/: package-lock.json  package.json  tsconfig.app.json
React/typescript/: index.ts
data/: 1.CSV  1.ipynb  1.py  1.xlsx  socket.ipynb
fastapi+nextjs/backend/: .env  requirements.txt
remix-app/: package-lock.json  package.json
remix-app/backend/: api.py  database.py  db.sqlite3  main.py  models.py
remix-app/frontend/: package-lock.json  tailwind.config.ts
test/templates/: index.html
(+159 files in other folders)
