[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djlint>=1.36.1",
    "fastapi>=0.115.4",
    "notebook>=7.2.2",
    "python-multipart>=0.0.17",
    "tortoise-orm>=0.21.7",
    "uvicorn>=0.32.0",
]
