[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.7.2",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.2.0",
    "djlint>=1.36.1",
    "fastapi>=0.115.4",
    "notebook>=7.2.2",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.17",
    "pytz>=2024.2",
    "tortoise-orm>=0.21.7",
    "uvicorn>=0.32.0",
]
